codepkg/objects/Draw__c.object
<CustomObject>
    <fields>
        <fullName>Account_Role__c</fullName>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>Draws</relationshipLabel>
        <relationshipName>Draws</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Draw</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Draw Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Draws</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>